添加有关volatile, locks和synchronization的详细注释
扩展了 Java 并发笔记，深入讲解了 volatile 关键字、其保证和限制、乐观锁和悲观锁策略、CAS 算法及其相关问题，以及 synchronized 的用法和内部机制。这些新增内容全面涵盖了 Java 中的线程安全机制及其实现细节。